k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apollo-supergraph
  labels:
    name: apollo-supergraph
