k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apollo-router-ingress
  namespace: apollo-supergraph
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: apollo-router.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apollo-router-service
                port:
                  number: 4000
